Added CI I stole from https://github.com/NuclearPowered/Reactor

--- a/Mitochondria/Mitochondria.csproj
+++ b/Mitochondria/Mitochondria.csproj
@@ -9,10 +9,10 @@
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         
-        <VersionPrefix>0.3.0</VersionPrefix>
-        <VersionSuffix>dev</VersionSuffix>
         <Description>API for Among Us mods</Description>
         <Authors>Daemon</Authors>
+
+        <ContinuousIntegrationBuild Condition="'$(GITHUB_ACTIONS)' == 'true'">true</ContinuousIntegrationBuild>
     </PropertyGroup>
 
     <ItemGroup>
