--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,5 +30,5 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: Mitochondria.dll
-          path: Mitochondria/bin/Release/net6.0/Mitochondria.dll
+          name: Mitochondria
+          path: Mitochondria/bin/Release/net6.0/*.dll
