--- a/Mitochondria/Mitochondria.csproj
+++ b/Mitochondria/Mitochondria.csproj
@@ -3,18 +3,23 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <LangVersion>latest</LangVersion>
-        
+
         <DebugType>embedded</DebugType>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 
-        <VersionPrefix>0.3.0</VersionPrefix>
+        <VersionPrefix>0.4.0</VersionPrefix>
         <VersionSuffix>dev</VersionSuffix>
         <Description>API for Among Us mods</Description>
-        <Authors>Daemon</Authors>
 
+        <Title>Mitochondria</Title>
+        <PackageId>astral.mitochondria</PackageId>
+        <Authors>Daemon</Authors>
+        <Company>Astral</Company>
+
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <ContinuousIntegrationBuild Condition="'$(GITHUB_ACTIONS)' == 'true'">true</ContinuousIntegrationBuild>
     </PropertyGroup>
 
@@ -27,7 +32,7 @@
         <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" PrivateAssets="all" ExcludeAssets="runtime">
           <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        
+
         <PackageReference Include="YamlDotNet" Version="13.1.1" />
     </ItemGroup>
 
