--- a/Mitochondria.Localization/Mitochondria.Localization.csproj
+++ b/Mitochondria.Localization/Mitochondria.Localization.csproj
@@ -3,6 +3,10 @@
     <Import Project="../Common.props" />
     <Import Project="../AmongUs.props" />
 
+    <PropertyGroup>
+        <Description>Localization module for Mitochondria</Description>
+    </PropertyGroup>
+
     <ItemGroup>
         <ProjectReference Include="..\Mitochondria.Core\Mitochondria.Core.csproj" />
     </ItemGroup>
