--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Run the Cake script
         uses: cake-build/cake-action@v2
         with:
+          cake-version: 4.2.0
           verbosity: Diagnostic
 
       - uses: actions/upload-artifact@v4
